# network_behaviour

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENTERPRISE_READY_SUMMARY.md  FINAL_SUMMARY.md  LICENSE  MANIFEST.in  QUICK_REFERENCE.md  README.md  app.py  cli.py  gui.py  main.py  pyproject.toml  requirements.txt  run_gui.bat  run_gui.sh  setup.py
.github/workflows/: ci.yml  publish.yml  publish.yml.txt
docs/: PROJECT_SUMMARY.md  PUBLISHING.md  QUICKSTART.md
examples/: README.md  example_dns_whois.py  example_network_info.py  example_packet_capture.py  example_port_scan.py
modules/: __init__.py
modules/dns_tools/: __init__.py  dns_lookup.py  whois_lookup.py
modules/network_info/: __init__.py  bandwidth_monitor.py  network_info.py
modules/network_scanner/: __init__.py  host_discovery.py  port_scanner.py  service_detector.py
modules/network_visualizer/: __init__.py  traffic_visualizer.py
modules/packet_capture/: __init__.py  packet_analyzer.py  packet_sniffer.py  protocol_parser.py
modules/utils/: __init__.py  network_utils.py
